--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
   <link rel="stylesheet" href="./index.css">
   <title>Chess</title>
 </head>
-<body>
-  <div id="board">
+<body id="main">
 
-  </div>
-
-  <script src="./app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
